[tool.poetry]
name = "ai-papers-search-tool"
version = "0.1.0"
description = "Automatic paper clustering and search tool by fastext from Facebook Research"
authors = ["George Araujo <george.gcac@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "ai_papers_search_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.10.0"
ipython = "^8.5.0"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
numpy = "^1.23.4"
scipy = "^1.9.2"
tqdm = "^4.64.1"
pyarrow = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
